--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
  @import "font-awesome";
 
 
+
  /* general */
 
  body {
@@ -52,89 +53,141 @@ img {
    }
  }
 
-
-
-
- /*
-navbar
- */
-
- .navbar-default {
-     background-color: #2F2F2F;
-     border-color: #2F2F2F;
- }
-
- #navbar-collapse-1 {
-   padding-right: 20px;
-   body {
-    color: blue;
-  }
- }
-
- .navbar-brand {
-    position: relative; z-index: 2;
-    color: white;
-  }
-
-
- .navbar-nav.navbar-right .btn {
-   color: white;
-   position: relative;
-   z-index: 2;
-   padding: 4px 40px;
-   margin: 10px auto;
-   transition: transform 0.3s;
- }
-
- .navbar .navbar-collapse { position: relative; overflow: hidden !important; }
- .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 22px; }
-
- .navbar .nav-collapse { position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; margin: 0; padding-right: 160px; padding-left: 80px; width: 100%; }
- .navbar.navbar-default .nav-collapse { background-color: #2F2F2F; }
- .navbar.navbar-inverse .nav-collapse { background-color: #2F2F2F; }
- .navbar .nav-collapse .navbar-form { border-width: 0; box-shadow: none; }
- .nav-collapse>li { float: right; }
-
- .btn.btn-circle { border-radius: 50px; }
-
-
- .navbar.navbar-default .nav-collapse,
- .navbar.navbar-inverse .nav-collapse {
-     height: auto !important;
-     transition: transform 0.3s;
-     transform: translate(0px,-50px);
- }
- .navbar.navbar-default .nav-collapse.in,
- .navbar.navbar-inverse .nav-collapse.in {
-     transform: translate(0px,0px);
+ .actions {
+   padding-top: 20px;
  }
 
 
- @media screen and (max-width: 767px) {
-     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; padding-top: 120px}
-
-     .navbar .nav-collapse { margin: 7.5px auto; padding: 0; }
-     .navbar .nav-collapse .navbar-form { margin: 0; }
-     .nav-collapse>li { float: none; }
-
-     .navbar.navbar-default .nav-collapse,
-     .navbar.navbar-inverse .nav-collapse {
-         transform: translate(-100%,0px);
-     }
-     .navbar.navbar-default .nav-collapse.in,
-     .navbar.navbar-inverse .nav-collapse.in {
-         transform: translate(0px,0px);
-     }
-
-     .navbar.navbar-default .nav-collapse.slide-down,
-     .navbar.navbar-inverse .nav-collapse.slide-down {
-         transform: translate(0px,-100%);
-     }
-     .navbar.navbar-default .nav-collapse.in.slide-down,
-     .navbar.navbar-inverse .nav-collapse.in.slide-down {
-         transform: translate(0px,0px);
-     }
+ .logo {
+   float: left;
+   margin-right: 10px;
+   font-size: 1.3em;
+   color: #fff;
+   text-transform: uppercase;
+   letter-spacing: -1px;
+   padding-top: 9px;
+   font-weight: bold;
  }
+
+ .logo:hover {
+   color: #fff;
+   text-decoration: none;
+ }
+
+
+ /*navbar */
+
+//  .wrapper {
+//    font-size: 1.3em;
+//  }
+//
+// .logo {
+//   float: left;
+//   margin-right: 10px;
+//   font-size: 1.3em;
+//   color: #fff;
+//   text-transform: uppercase;
+//   letter-spacing: -1px;
+//   padding-top: 9px;
+//   font-weight: bold;
+// }
+//
+// .logo:hover {
+//   color: #fff;
+//   text-decoration: none;
+// }
+//
+//  .navbar-default {
+//      background-color: #2F2F2F;
+//
+//  }
+//
+//
+//
+//  #navbar-collapse-1 {
+//    padding-right: 20px;
+//    body {
+//     color: #fff;
+//   }
+//  }
+//
+//
+//  .navbar-nav.navbar-right .btn {
+//    color: white;
+//    position: relative;
+//    z-index: 2;
+//    padding: 4px 40px;
+//    margin: 10px auto;
+//    transition: transform 0.3s;
+//  }
+//
+//  .navbar .navbar-collapse {
+//    position: relative;
+//    overflow: hidden !important;
+//  }
+//
+//  .navbar .navbar-collapse .navbar-right > li:last-child {
+//     padding-left: 22px;
+//   }
+//
+//  .navbar .nav-collapse {
+//    position: absolute;
+//    z-index: 1;
+//    top: 0;
+//    left: 0;
+//    right: 0;
+//    bottom: 0;
+//    margin: 0;
+//    padding-right: 160px;
+//    padding-left: 80px;
+//    width: 100%;
+//  }
+//
+//  .navbar.navbar-default .nav-collapse { background-color: #2F2F2F; }
+//  .navbar.navbar-inverse .nav-collapse { background-color: #2F2F2F; }
+//  .navbar .nav-collapse .navbar-form { border-width: 0; box-shadow: none; }
+//  .nav-collapse>li { float: right; }
+//
+//  .btn.btn-circle { border-radius: 50px; }
+//
+//
+//  .navbar.navbar-default .nav-collapse,
+//  .navbar.navbar-inverse .nav-collapse {
+//      height: auto !important;
+//      transition: transform 0.3s;
+//      transform: translate(0px,-50px);
+//  }
+//  .navbar.navbar-default .nav-collapse.in,
+//  .navbar.navbar-inverse .nav-collapse.in {
+//      transform: translate(0px,0px);
+//  }
+//
+//
+//  @media screen and (max-width: 767px) {
+//      .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; padding-top: 120px}
+//
+//      .navbar .nav-collapse { margin: 7.5px auto; padding: 0; }
+//      .navbar .nav-collapse .navbar-form { margin: 0; }
+//      .nav-collapse>li { float: none; }
+//
+//      .navbar.navbar-default .nav-collapse,
+//      .navbar.navbar-inverse .nav-collapse {
+//          transform: translate(-100%,0px);
+//      }
+//      .navbar.navbar-default .nav-collapse.in,
+//      .navbar.navbar-inverse .nav-collapse.in {
+//          transform: translate(0px,0px);
+//      }
+//
+//      .navbar.navbar-default .nav-collapse.slide-down,
+//      .navbar.navbar-inverse .nav-collapse.slide-down {
+//          transform: translate(0px,-100%);
+//      }
+//      .navbar.navbar-default .nav-collapse.in.slide-down,
+//      .navbar.navbar-inverse .nav-collapse.in.slide-down {
+//          transform: translate(0px,0px);
+//      }
+//  }
 
 
 
@@ -221,34 +274,8 @@ navbar
    }
  }
 
- /* footer */
+/* footer */
 
- .copyrights{
- margin-top:25px;
- }
-
-
- .dark-line{
- border-top: 1px solid #525252;
- }
-
- .white-txt{
- color: #FFF;
- }
-
-
- a.link {
-     color: #FFFFFF;
-     border: 1px #008acc solid;
-     padding: 5px;
-     text-decoration: none;
- }
-
- a.link:hover {
- background: #008acc;
-     color: #383838;
- }
-
- .footimg{
- width: 5rem;
- }
+#contactwrap {
+  text-align: center;
+}
