--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,47 @@
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="logo"><%= link_to 'Urlaub auf Korsika', root_path, :class => "logo" %></a>
+      </div>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand"><%= link_to 'Urlaub auf Korsika', root_path, :class => "navbar-brand" %></a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-              <% if user_signed_in? %>
-                <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
-              <% else %>
-                <li><%= link_to('Login', new_user_session_path) %></li>
-              <% end %>
-              <%if current_user.admin? %>
-              <li><a class="btn btn-warning btn-outline btn-circle collapsed"  data-toggle="collapse" href="#nav-collapse1" aria-expanded="false" aria-controls="nav-collapse1">Admin</a></li>
-              <%else%>
-              <li><%= link_to 'Neue Reservierung', new_path, :class => "btn btn-warning btn-outline btn-circle collapsed" %></li>
-              <%end%>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <% if user_signed_in? %>
+            <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
+          <% else %>
+            <li><%= link_to('Login', new_user_session_path) %></li>
+          <% end %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Weitere Infos <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Entdecken", discover_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Allgemeine Informationen", info_path %></li>
             </ul>
-            <ul class="collapse nav navbar-nav nav-collapse" id="nav-collapse1">
+          </ul>
+          </li>
+        <ul class="navbar-form navbar-right">
+          <%if current_user.admin? %>
+          <li class="dropdown">
+            <a href="#" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+            <ul class="dropdown-menu">
               <li><%= link_to "Reservierungen", all_path %></li>
+              <li role="separator" class="divider"></li>
               <li> <%= link_to "Kalender", calendar_path %></li>
             </ul>
-        </div>
-      </div>
-    </nav>
+            <%else%>
+            <li><%= link_to 'Neue Reservierung', new_path, :class => "btn btn-warning btn-outline btn-circle collapsed" %></li>
+            <%end%>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
