--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,9 @@
-
- <section id="home" name="home"></section>
+<section id="home" name="home"></section>
  <div id="headerwrap">
    <div class="container">
      <div class="row">
        <div class="col-md-6 col-md-offset-3">
-         <h1>Salute! Corsica</h1>
+         <h1>Salute Corsica!</h1>
          </br>
          <%= link_to "Jetzt das Haus reservieren!", new_path, :class => "btn btn-warning btn-lg"%>
        </div>
@@ -135,17 +134,14 @@
      <div class="row mt centered">
        <h1>Das Wichtigste in Kürze</h1>
        <div class="col-lg-4 proc">
-         <i class="fa fa-users"></i>
          <h3>Die Anlage</h3>
          <p>Die Anlage A Chiosura hat über 50 Häuser, untereilt in 3 Blöcke. Die Häuser sind alle voneinander getrennt und bieten genug Privatsphäre</p>
        </div>
        <div class="col-lg-4 proc">
-         <i class="fa fa-home"></i>
          <h3>Das Haus B11</h3>
          <p>Bietet Platz für 4 Personen, 2 Bäder, große Küche, Terasse, Garten inklusive Aussendusche.</p>
        </div>
        <div class="col-lg-4 proc">
-         <i class="fa fa-life-ring"></i>
          <h3>Der Strand</h3>
          <p>Die Anlage besitzt einen direkten Strandzugang. Vom Haus sind es 100m direkt ins kühle Wasser.</p>
        </div>
@@ -182,37 +178,37 @@
        </div>
        <div class="row mt">
          <div class="col-lg-3 service">
-           <i class="fa fa-leaf"></i><p>Küche & Couch<br/><small>Treppe nach oben</small></p>
+           <p>Küche & Couch<br/><small>Treppe nach oben</small></p>
              <a class="fancybox"><%= image_tag("inhouse1.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-bed"></i><p>Schlafzimmer 1<br/><small>1 Stock</small></p>
+           <p>Schlafzimmer 1<br/><small>1 Stock</small></p>
            <a class="fancybox"><%= image_tag("inhouse2.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-bed"></i><p>Schlafzimmer 2<br/><small>Erdgeschoss</small></p>
+           <p>Schlafzimmer 2<br/><small>Erdgeschoss</small></p>
            <a class="fancybox"><%= image_tag("inhouse4.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-bath"></i><p>1 Badezimmer oben<br/><small>1 Stock</small></p>
+           <p>1 Badezimmer oben<br/><small>1 Stock</small></p>
            <a class="fancybox"><%= image_tag("inhouse5.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
        </div><! --/row -->
        <div class="row mt">
          <div class="col-lg-3 service">
-           <i class="fa fa-bath"></i><p>Badezimmer unten<br/><small>Erdgeschoss</small></p>
+           <p>Badezimmer unten<br/><small>Erdgeschoss</small></p>
            <a class="fancybox"><%= image_tag("inhouse6.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-sun-o"></i><p>Der Strand<br/><small>Gehört quasi zum Haus</small></p>
+           <p>Der Strand<br/><small>Gehört quasi zum Haus</small></p>
            <a class="fancybox"><%= image_tag("inhouse7.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-star"></i><p>Gute Nachbarn<br/><small>Die Gumpen</small></p>
+           <p>Gute Nachbarn<br/><small>Die Gumpen</small></p>
            <a class="fancybox"><%= image_tag("inhouse8.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
          <div class="col-lg-3 service">
-           <i class="fa fa-star"></i><p>Gute Nachbarn II<br/><small>Bonifacio</small></p>
+           <p>Gute Nachbarn II<br/><small>Bonifacio</small></p>
            <a class="fancybox"><%= image_tag("inhouse9.jpg", :alt => "", :class => "img-responsive") %></a>
          </div>
        </div><! --/row -->
